--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-register": "^6.11.6",
     "chance": "^1.0.4",
     "co-body": "^4.2.0",
+    "jsonschema": "^1.1.0",
     "koa": "^2.0.0",
     "lodash": "^4.15.0",
     "mz": "^2.4.0",
@@ -45,8 +46,7 @@
     "babel-eslint": "^6.1.2",
     "eslint": "^3.3.1",
     "eslint-config-airbnb": "^10.0.1",
-    "eslint-plugin-jsx-a11y": "^2.1.0",
-    "eslint-plugin-flowtype": "^2.11.0",
+    "eslint-plugin-flowtype": "^2.11.1",
     "eslint-plugin-import": "^1.13.0",
     "eslint-plugin-jsx-a11y": "^2.1.0",
     "eslint-plugin-react": "^6.1.2"
