Logger can now start in Https
- uses koa-force-ssl
- For logger to start in https certificate and key have to be specified as
  environnement variables
- certificate is stored in DATABRIDGE_CERTIFICATE
- key is stored in DATABRIDGE_KEY

Why ? make it safe. And enable cacbe +serviceWorker

--- a/package.json
+++ b/package.json
@@ -35,9 +35,12 @@
     "babel-register": "^6.11.6",
     "chance": "^1.0.4",
     "co-body": "^4.2.0",
+    "fs": "0.0.1-security",
+    "https": "^1.0.0",
     "jsonschema": "^1.1.0",
     "koa": "^2.0.0",
     "koa-cors": "0.0.16",
+    "koa-force-ssl": "0.0.5",
     "lodash": "^4.15.0",
     "mz": "^2.4.0",
     "performance-now": "^0.2.0",
