--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "jsonschema": "^1.1.0",
     "koa": "^2.0.0",
     "koa-cors": "0.0.16",
-    "koa-force-ssl": "0.0.5",
+    "koa-sslify": "^1.1.0",
     "lodash": "^4.15.0",
     "mz": "^2.4.0",
     "performance-now": "^0.2.0",
