--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./server.js",
     "lint": "node ./node_modules/eslint/bin/eslint.js src",
-    "compile": "cp -R ./src ./lib && ./node_modules/babel-cli/bin/babel.js -d lib src/",
-    "prestart": "npm run compile",
-    "prepare": "npm run compile"
+    "transpile": "cp -R ./src ./lib && ./node_modules/babel-cli/bin/babel.js -d lib src/",
+    "prestart": "npm run transpile",
+    "prepublishOnly": "npm run transpile"
   },
   "repository": {
     "type": "git",
