remove compling of lib

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./server.js",
     "lint": "node ./node_modules/eslint/bin/eslint.js src",
-    "transpile": "cp -R ./src/* ./lib/ && ./node_modules/babel-cli/bin/babel.js -d lib src/",
+    "transpile": "cp -R ./src/* && ./node_modules/babel-cli/bin/babel.js -d lib src/",
     "prestart": "npm run transpile",
     "prepublishOnly": "npm run transpile"
   },
