--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/DataBridge/logger#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-core": "^6.13.2",
     "babel-plugin-transform-async-to-generator": "^6.8.0",
     "babel-plugin-transform-class-properties": "^6.11.5",
