--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.11.6",
     "co-body": "^4.2.0",
+    "country-data": "0.0.31",
+    "geoip-lite": "^1.3.1",
     "jsonschema": "^1.1.0",
     "koa": "^2.0.0",
     "koa-cors": "0.0.16",
@@ -50,10 +52,10 @@
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
-    "babel-eslint": "^6.1.2",
-    "eslint": "^3.3.1",
+    "babel-eslint": "^8.0.1",
+    "eslint": "^4.10.0",
     "eslint-config-airbnb": "^10.0.1",
-    "eslint-plugin-flowtype": "^2.11.1",
+    "eslint-plugin-flowtype": "^2.50.0",
     "eslint-plugin-import": "^1.13.0",
     "eslint-plugin-jsx-a11y": "^2.1.0",
     "eslint-plugin-react": "^6.1.2"
